--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "live-server",
+    "babel": "babel . --out-dir dist --presets=es2015,react --ignore=node_modules,dist --source-maps inline --watch"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "babel-cli": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "jquery": "^3.1.1",
     "live-server": "^1.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
